Fix alignment in Firefox again.

--- a/css/main.scss
+++ b/css/main.scss
@@ -421,6 +421,15 @@ blockquote {
         right: 0;
         margin: 0 auto;
       }
+
+      &.align--center img {
+        top: 50%;
+        transform: translateY(-50%);
+      }
+
+      &.align--bottom img {
+        bottom: 0;
+      }
     }
 
     .card__cover {
